Revert delayed loading of CSS/webfont to prevent layout issues.

--- a/css/schwermetallband.css
+++ b/css/schwermetallband.css
@@ -45,12 +45,14 @@ h1 {
 
 /*--- band logo and top navigation ---*/
 
-img.bandlogo {
+.logo {
 	padding-top: 3%;
 	padding-bottom: 10%;
-	max-width: 60%;
+}
+
+img.bandlogo {
 	aspect-ratio: auto 1933 / 1088;
-	object-fit: contain;
+	max-width: 60%;
 }
 
 .topNav {
@@ -134,6 +136,7 @@ img.bandlogo {
 #epfg {
 	aspect-ratio: auto 351 / 346;
 	object-fit: contain;
+	max-width: 100%;
 }
 .songs {
 	display: inline-block;
@@ -141,6 +144,7 @@ img.bandlogo {
 .mp3player {
 	height: 1.5em;
 	border-radius: 4px;
+	max-width: 100%;
 }
 
 /*--- band ---*/
